// Copyright 2026 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.internal.kingdom;

import "google/type/date.proto";

option java_package = "org.wfanet.measurement.internal.kingdom";
option java_multiple_files = true;

// A date interval. This is intended for mirroring the existing
// `google.type.Interval` proto message, replacing google.protobuf.Timestamp
// fields type with google.type.Data
message DateInterval {
  // Start of the date interval, inclusive.
  google.type.Date start_date = 1;
  // End of the date interval, exclusive. 'end_date' must be
  // later than 'start_date'. When the start equals the end, the interval is
  // empty (matches no time).
  google.type.Date end_date = 2;
}